# gstreamer-imx

./: CMakeLists.txt  README.md  config.h.in
debian/: changelog  control
src/common/: CMakeLists.txt
src/eglvivsink/: CMakeLists.txt
src/ipu/: CMakeLists.txt  allocator.c  blitter.c
src/v4l2src/: CMakeLists.txt
src/vpu/: CMakeLists.txt
